--- a/0-/Outdated Wiki Pages.mediawiki
+++ b/0-/Outdated Wiki Pages.mediawiki
@@ -11,3 +11,18 @@ These Pages need some updates:
 *** the waf switch is already done, isn't it?
 ** When I add my media collection to the playlist, x files don't show up.
 *** the bug mentioned in A2 is marked as resolved. should that part be removed?
+
+* [[Contribs]]
+** XPLAY
+*** The svn server doesn't work any more
+** Init Scripts
+*** the bug has since been rejected, remove this, too?
+** BSD init scripts
+*** the contrib folder on xmms2.xmms.se 404s.
+** Play-Pause toggle client (python, C)
+*** nycli does this perfectly, does it not? why have it?
+** XChat2 info script
+*** the server doesn't seem to exist any more. remove it?
+** Bash tab completion for the xmms2 client
+*** the page linked to ("bash tab completion for the CLI") seems much more comprehensive. but is it still up to date?
+** the rest still needs looking at.
