Levitation import of page 2552 rev 9088.

--- a/0-/Outdated Wiki Pages.mediawiki
+++ b/0-/Outdated Wiki Pages.mediawiki
@@ -1,5 +1,8 @@
 These Pages need some updates:
 
+* This Page!
+** There is still much outdated stuff to be found on this here Wiki!
+
 * [[FAQ]]
 ** When will XMMS2 be released As a non-Developer release?
 *** isn't that already the case?
