--- a/0-/Client:Cocopapa.mediawiki
+++ b/0-/Client:Cocopapa.mediawiki
@@ -1,1 +1,1 @@
-{{Client |name=Cocopapa| author=[[user:nesciens | Erik Massop]]| website=http://home.zonnet.nl/massope/cocopapa/| version=0.1.1 | devlanguage=C | ui=Console | screenshots=N/A | description=Cocopapa is a collection pattern parser which is primarily meant to be powerful; not user-friendly. The name is an acronym of "Complex Collection Pattern Parser". Also check Cocopapa's little sister [[Client:Sisy| Sisy]]}}.
+{{Client |name=Cocopapa| author=[[user:nesciens | Erik Massop]]| website=http://home.zonnet.nl/massope/cocopapa/| version=0.1.1 | devlanguage=C | ui=Console | screenshots=N/A | description=Cocopapa is a collection pattern parser which is primarily meant to be powerful; not user-friendly. The name is an acronym of "Complex Collection Pattern Parser". Also check Cocopapa's little sister [[Client:sisy| Sisy]]}}.
