--- a/0-/GSoC:2011/Proposed projects.mediawiki
+++ b/0-/GSoC:2011/Proposed projects.mediawiki
@@ -59,4 +59,4 @@ mount point of a rockbox device and the name of a collection would merge that co
 
 == Bindings ==
 
-{{SoCItem| title=emacs Client library| description=Emacs supports everything, and is a magical land where things are still amazing and special. XMMS2 also fits some of that description, so clearly one should be able to control and program clients for xmms2 from emacs! This project would be to implement the client library in ELisp as well as a small client, or better still EMMS integration.| lang=elisp| level=Easy to Medium| mentor=N/A}}
+{{SoCItem| title=Client side GenIPC| description=A previous GSoC brought us our vision of generating lots of boring code in the IPC layer. Currently code to work with the protocol is generated for the server side and has been in use for the past year with great success, but the client side is still not generated. This task could involve updating all our client libraries, or just a few, with the priority to generate the C-based client library.| lang=C,Python,Ruby,Perl,C++| level=Easy to Medium| mentor=N/A}}
