--- a/0-/GSoC:2011/Proposed projects.mediawiki
+++ b/0-/GSoC:2011/Proposed projects.mediawiki
@@ -6,9 +6,6 @@ The following ideas are hints at possible projects that we would like to see in 
 |level=Depends
 |mentor=Depends}}
 
-
-
-
 == Interoperability with third-parties ==
 
 {{SoCItem| title=Rockbox sync| description=[http://www.rockbox.org Rockbox] is the super cool F/OSS firmware for your music player. It stores its metadata in
@@ -27,6 +24,8 @@ mount point of a rockbox device and the name of a collection would merge that co
 
 == Extending Features ==
 
+{{SoCItem| title=Service Clients| description=The Service Clients concept has been around in the XMMS2 world for quite some time. There is even a reference implementation available. The project would be to bring this reference implementation into shape and integrate it with our generated IPC framework.| lang=C| level=Medium|mentor=N/A}} 
+
 {{SoCItem| title=Social Networking| description=Social Networks are the new hype - can you think of innovative ways to bring a social side to XMMS2, either as a new layer or using existing services (Last.Fm, Songkick, Musicbrainz, Twitter, Flickr, Facebook, Freebase, etc). Share music, talk about music, recommend new artists, share tags and ratings, possibilities are endless!| lang=Any| level=Medium| mentor=N/A}}
 
 {{SoCItem| title=Logtable| description=We miss the log table, let's bring it back, maybe as a service client.| lang=C| level=Medium| mentor=N/A}}
@@ -41,6 +40,6 @@ mount point of a rockbox device and the name of a collection would merge that co
 |mentor=N/A}}
 
 
-== Bindings ==
+== Client Library ==
 
 {{SoCItem| title=Client side GenIPC| description=A previous GSoC brought us our vision of generating lots of boring code in the IPC layer. Currently code to work with the protocol is generated for the server side and has been in use for the past year with great success, but the client side is still not generated. This task could involve updating all our client libraries, or just a few, with the priority to generate the C-based client library.| lang=C,Python,Ruby,Perl,C++| level=Easy to Medium| mentor=N/A}}
