--- a/0-/Google Summer of Code.mediawiki
+++ b/0-/Google Summer of Code.mediawiki
@@ -5,4 +5,4 @@ There has been one try to apply for the Google Summer of Code:
 * [[Summer of Code 2008]] - 6 projects accepted
 * [[Summer of Code 2009]] - 2 projects accepted
 * [[Summer of Code 2010]] - 4 projects accepted
-* [[Summer of code 2011]] - Google Summer of Code 2011 is March 11th.
+* [[Summer of Code 2011]] - Google Summer of Code 2011 is March 11th.
