Levitation import of page 2556 rev 9109.

--- a/0-/GSoC:2011/Mentor Application.mediawiki
+++ b/0-/GSoC:2011/Mentor Application.mediawiki
@@ -35,7 +35,7 @@
 ** We promote the students to come up with their own unique proposal, but inspiration can be found at: http://xmms2.org/wiki/Summer_of_Code_2011/Student_Application
 
 * What criteria did you use to select the individuals who will act as mentors for your organization? Please be as specific as possible
-** TODO
+** We select members based on their involvement in the community (time, code contributed, social involvement) and their availability over the course of the GSoC program. We have a pool of past mentors whom we know we can rely on, but new mentors are also welcome if they have proved their ability to supervise a project.
 
 * What is your plan for dealing with disappearing students?
 ** As we have done for the last three years, we are still working on our remote, solar-powered deadly nanobot-driven amphibian anaconda as a friendly encouragement for students to not drop their project. This means an extensive chat with all the serious candidates, to try to determine how available, reliable and honest they are. We will also ask a detailed project/work history (FOSS or not), to check whether the student has already proven to be capable of completing a project. During the GSoC, the mandatory IRC presence and status reports will help us keep track of people's work and involvement. We will try to communicate the expectations and requirements as clearly as possible, and the students will know that they will be failed if these are not met. This is two ways - just as we have to prepare for disappearing students - if students do not live up to the expectations, we need to make them "disappear" :) Someone very wise once said: If your student hasn't checked in code by the mid-term evaluation or if your student can't make themselves available to discuss the review, fail them. If you're not 85% certain that the student will continue with the project, fail them! Work with your students to set up expectations; if your student doesn't follow these expectations, but you're happy, Google doesn't care. But if you're not happy, then reiterate your expectations to the student and make sure they understand them. If they still don't live up to their expectations, ask them to leave. (Leslie Hawthorn)
