Levitation import of page 2553 rev 9114.

--- a/0-/GSoC:2011/Proposed projects.mediawiki
+++ b/0-/GSoC:2011/Proposed projects.mediawiki
@@ -24,7 +24,7 @@ mount point of a rockbox device and the name of a collection would merge that co
 
 == Extending Features ==
 
-{{SoCItem| title=Service Clients| description=The Service Clients concept has been around in the XMMS2 world for quite some time. There is even a [http://git.xmms.se/cgit.cgi/xmms2/xmms2-puzzles/log/?h=sc reference implementation available]. The project would be to bring this reference implementation into shape and integrate it with our generated IPC framework.| lang=C| level=Medium|mentor=N/A}} 
+{{SoCItem| title=Service Clients| description=The Service Clients concept has been around in the XMMS2 world for quite some time. There is even a [http://git.xmms.se/cgit.cgi/xmms2/xmms2-puzzles/log/?h=sc reference implementation available]. The project would be to bring this reference implementation into shape and integrate it with our generated IPC framework. The API might also need some clean up, analyze it and point out pros and cons in your proposal.| lang=C| level=Medium|mentor=N/A}} 
 
 {{SoCItem| title=Social Networking| description=Social Networks are the new hype - can you think of innovative ways to bring a social side to XMMS2, either as a new layer or using existing services (Last.Fm, Songkick, Musicbrainz, Twitter, Flickr, Facebook, Freebase, etc). Share music, talk about music, recommend new artists, share tags and ratings, possibilities are endless!| lang=Any| level=Medium| mentor=N/A}}
 
