Levitation import of page 2553 rev 9117.

--- a/0-/GSoC:2011/Proposed projects.mediawiki
+++ b/0-/GSoC:2011/Proposed projects.mediawiki
@@ -40,3 +40,5 @@ mount point of a rockbox device and the name of a collection would merge that co
 == Client Library ==
 
 {{SoCItem| title=Client side GenIPC| description=A previous GSoC brought us our vision of generating lots of boring code in the IPC layer. Currently code to work with the protocol is generated for the server side and has been in use for the past year with great success, but the client side is still not generated. This task could involve updating all our client libraries, or just a few, with the priority to generate the C-based client library.| lang=C,Python,Ruby,Perl,C++| level=Easy to Medium| mentor=N/A}}
+
+{{SoCItem| title=JSON/REST API| description=As it's hip to write applications in JavaScript these days it would be nice if we had a client that exposes the XMMS2 API as a JSON/REST service. This has been reimplemented in quite a few clients already, but never in a way meant for being reused. A proposal would discuss the technical difficulties in making a good JSON/REST-API (for example how to treat broadcasts, signals), and what kind of problems might appear (namespace issues etc), what HTTP verbs fits where etc. This client would preferably be generated with the help of GenIPC, either build time, or on the fly.| lang=Any (preferably Python)| level=Easy to Medium| mentor=N/A}}
