add 2007 to the GSoC category
Levitation import of page 2303 rev 9251.

--- a/0-/GSoC:2007.mediawiki
+++ b/0-/GSoC:2007.mediawiki
@@ -12,3 +12,5 @@
 [[Summer_of_Code_2007/Mentors|Mentor information]]
 
 [[Summer_of_Code_2007/Mentor_Application|Our application]]
+
+[[Category:GSoC]]
