add 2008 to the GSoC category
Levitation import of page 2426 rev 9252.

--- a/0-/GSoC:2008.mediawiki
+++ b/0-/GSoC:2008.mediawiki
@@ -15,3 +15,5 @@ Accepted projects:
 [[Summer_of_Code_2008/Mentors|Mentor information]]
 
 [[Summer_of_Code_2008/Mentor_Application|Our application]]
+
+[[Category:GSoC]]
