--- a/0-/GSoC:2009.mediawiki
+++ b/0-/GSoC:2009.mediawiki
@@ -1,4 +1,3 @@
-
 == Accepted Projects ==
 
 * [http://www.google-melange.com/gsoc/student_project/show/google/gsoc2009/xmms2/t124025007379 The official awesome client]
@@ -33,3 +32,5 @@ Creating a document much like http://wiki.python.org/moin/SummerOfCode/Expectati
 How do we ensure communication?
 
 Required status updates?
+
+[[Category:GSoC]]
