add 2010 to the GSoC category
Levitation import of page 2527 rev 9254.

--- a/0-/GSoC:2010.mediawiki
+++ b/0-/GSoC:2010.mediawiki
@@ -14,3 +14,5 @@
 [[Summer_of_Code_2010/Mentors|Mentor information]]
 
 [[Summer_of_Code_2010/Mentor_Application|Our application]] - '''DEADLINE 12th of March'''
+
+[[Category:GSoC]]
