add 2011 to GSoC category
Levitation import of page 2554 rev 9255.

--- a/0-/GSoC:2011.mediawiki
+++ b/0-/GSoC:2011.mediawiki
@@ -11,3 +11,5 @@
 [[Summer_of_Code_2011/Mentors|Mentor information]]
 
 [[Summer_of_Code_2011/Mentor_Application|Our application]] - '''DEADLINE 12th of March'''
+
+[[Category:GSoC]]
